# main-backend

./: .env.prod  .gitignore  .gitmessage.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yaml
config/: settings.py
config/settings/: __init__.py  base.py  dev.py  prod.py
config/urls/: dev_urls.py  prod_urls.py
diary/: admin.py  ai_urls.py  models.py  music_urls.py  serializers.py  urls.py  views.py  views_ai.py  views_music.py
diary/migrations/: 0001_initial.py  0002_alter_diary_diary_id.py  0002_diary_date.py  0002_initial.py  0002_rename_title_diary_diary_title_diary_moods.py  0003_alter_diary_date.py  0003_rename_member_id_diary_member.py
diary/tests/: test_ai.py  test_diary.py  test_music_info.py  testr_music_info.py
diary/urls/: ai_urls.py  diary_urls.py  music_urls.py
diary/views/: ai_views.py  diary_views.py  music_views.py
member/: admin.py  models.py  oauth_urls.py  oauth_views.py  serializer.py  urls.py  views.py
member/migrations/: 0001_initial.py  0002_member_is_staff_member_is_superuser.py  0002_memberinfo_created_at_memberinfo_updated_at.py  0003_member_groups_member_is_active_and_more.py  0004_alter_socialaccount_email_alter_socialaccount_member_and_more.py  0005_alter_member_nickname.py  0006_alter_member_nickname.py  0007_alter_socialaccount_member.py  0008_alter_member_favorite_genre_alter_member_introduce_and_more.py  0009_alter_member_nickname.py  0010_socialaccount_is_registered_alter_member_is_active.py
member/tests/: api_tests.py  oauth_tests.py  test_api_views.py  test_oauth_views.py
member/urls/: api_urls.py  oauth_urls.py
member/views/: api_views.py  oauth_views.py
